syntax = "proto3";

option go_package = "ulambda/hotel/proto";

service Rec {
  // Finds the hotels contained nearby the current lat/lon.
  rpc GetRecs(RecRequest) returns (RecResult);
}

// The latitude and longitude of the current location.
message RecRequest {
  string require = 1;
  double lat = 2;
  double lon = 3;
}

message RecResult {
  repeated string hotelIds = 1;
}
